k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: client-deployment
spec:
    replicas: 3
    selector: 
        matchLabels:
            component: web
    template:
        metadata:
            labels:
                component: web
        spec:
            containers:
                - name: client
                  image: drew2222222/react-signup-form
                  ports:
                    - containerPort: 3000
